refactor compilations